--- a/genindex.html
+++ b/genindex.html
@@ -1191,6 +1191,8 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.calculate">(wfl.calculators.orca.ORCA method)</a>
 </li>
+        <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.calculate">(wfl.calculators.vasp.Vasp method)</a>
+</li>
       </ul></li>
       <li><a href="wfl.calculators.html#wfl.calculators.committee.calculate_committee">calculate_committee() (in module wfl.calculators.committee)</a>
 </li>
@@ -1249,7 +1251,11 @@ title="Fullscreen mode"
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.default_parameters">default_parameters (wfl.calculators.orca.ORCA attribute)</a>
+
+      <ul>
+        <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.default_parameters">(wfl.calculators.vasp.Vasp attribute)</a>
 </li>
+      </ul></li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations.derive_normal_mode_info">derive_normal_mode_info() (wfl.generate.vib.Vibrations method)</a>
 </li>
       <li><a href="wfl.html#wfl.descriptor_heuristics.descriptor_2brn_uniform_file">descriptor_2brn_uniform_file() (in module wfl.descriptor_heuristics)</a>
@@ -1260,10 +1266,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.utils.html#wfl.utils.params.Params.dft_params">dft_params (wfl.utils.params.Params property)</a>
 </li>
-      <li><a href="wfl.fit.gap.html#wfl.fit.gap.simple.dict_to_gap_fit_string">dict_to_gap_fit_string() (in module wfl.fit.gap.simple)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.fit.gap.html#wfl.fit.gap.simple.dict_to_gap_fit_string">dict_to_gap_fit_string() (in module wfl.fit.gap.simple)</a>
+</li>
       <li><a href="wfl.utils.html#wfl.utils.quip_cli_strings.dict_to_quip_str">dict_to_quip_str() (in module wfl.utils.quip_cli_strings)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.misc.dict_tuple_keys_to_str">dict_tuple_keys_to_str() (in module wfl.utils.misc)</a>
@@ -1291,15 +1297,11 @@ title="Fullscreen mode"
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations.evals_to_freqs">evals_to_freqs() (wfl.generate.vib.Vibrations static method)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.castep.evaluate_autopara_wrappable">evaluate_autopara_wrappable() (in module wfl.calculators.castep)</a>
-
-      <ul>
-        <li><a href="wfl.calculators.html#wfl.calculators.vasp.evaluate_autopara_wrappable">(in module wfl.calculators.vasp)</a>
 </li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.evaluate_basin_hopping">evaluate_basin_hopping() (in module wfl.calculators.orca.basinhopping)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.html#wfl.calculators.dft.evaluate_dft">evaluate_dft() (in module wfl.calculators.dft)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.evaluate_iter_and_fit_all">evaluate_iter_and_fit_all() (in module wfl.cli.gap_rss_iter_fit)</a>
@@ -1686,6 +1688,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.parse_npa_output">parse_npa_output() (in module wfl.calculators.orca)</a>
 </li>
+      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.per_config_restore">per_config_restore() (wfl.calculators.vasp.Vasp method)</a>
+</li>
+      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.per_config_setup">per_config_setup() (wfl.calculators.vasp.Vasp method)</a>
+</li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.pick_task">pick_task() (wfl.calculators.orca.ORCA method)</a>
 </li>
       <li><a href="wfl.fit.modify_database.html#wfl.fit.modify_database.gap_rss_set_config_sigmas_from_convex_hull.piecewise_linear">piecewise_linear() (in module wfl.fit.modify_database.gap_rss_set_config_sigmas_from_convex_hull)</a>
@@ -1694,10 +1700,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.fit.gap.html#wfl.fit.gap.multistage.prep_params">prep_params() (in module wfl.fit.gap.multistage)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.atoms_and_dimers.prepare">prepare() (in module wfl.generate.atoms_and_dimers)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.generate.html#wfl.generate.atoms_and_dimers.prepare">prepare() (in module wfl.generate.atoms_and_dimers)</a>
+</li>
       <li><a href="wfl.fit.html#wfl.fit.ace.prepare_configs">prepare_configs() (in module wfl.fit.ace)</a>
 </li>
       <li><a href="wfl.fit.html#wfl.fit.ace.prepare_params">prepare_params() (in module wfl.fit.ace)</a>
@@ -1796,7 +1802,7 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.select_fitting_and_testing_for_groups">select_fitting_and_testing_for_groups() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.setup_params_for_this_calc">setup_params_for_this_calc() (wfl.calculators.espresso.Espresso method)</a>
+      <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.setup_calc_params">setup_calc_params() (wfl.calculators.espresso.Espresso method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1845,6 +1851,8 @@ title="Fullscreen mode"
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp">Vasp (class in wfl.calculators.vasp)</a>
+</li>
       <li><a href="wfl.utils.html#wfl.utils.convex_hull.vertical_dist_from_hull">vertical_dist_from_hull() (in module wfl.utils.convex_hull)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations">Vibrations (class in wfl.generate.vib)</a>
@@ -2750,6 +2758,8 @@ title="Fullscreen mode"
 </li>
       </ul></li>
       <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.wfl_generic_def_autopara_info">wfl_generic_def_autopara_info (wfl.calculators.espresso.Espresso attribute)</a>
+</li>
+      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.wfl_generic_num_inputs_per_python_subprocess">wfl_generic_num_inputs_per_python_subprocess (wfl.calculators.vasp.Vasp attribute)</a>
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.write_input">write_input() (wfl.calculators.orca.ORCA method)</a>
 </li>
