--- a/genindex.html
+++ b/genindex.html
@@ -1132,6 +1132,8 @@ title="Fullscreen mode"
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.fit.html#wfl.fit.utils.ace_fit_jl_path">ace_fit_jl_path() (in module wfl.fit.utils)</a>
+</li>
       <li><a href="wfl.generate.html#wfl.generate.supercells.antisite">antisite() (in module wfl.generate.supercells)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.supercells.antisite_autopara_wrappable">antisite_autopara_wrappable() (in module wfl.generate.supercells)</a>
