deploy: 764881d17447801bfec927153ba6e026d0b0f9b0

--- a/genindex.html
+++ b/genindex.html
@@ -461,8 +461,6 @@ title="Fullscreen mode"
       <ul>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-castep-eval-base-rundir">wfl-ref-method-castep-eval command line option</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-base-rundir">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-base-rundir">wfl-ref-method-orca-eval-basin-hopping command line option</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-vasp-eval-base-rundir">wfl-ref-method-vasp-eval command line option</a>
@@ -502,9 +500,14 @@ title="Fullscreen mode"
       <ul>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-processing-reference-error-k">wfl-processing-reference-error command line option</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-calc-kwargs">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-calc-kwargs">wfl-ref-method-orca-eval-basin-hopping command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --calculator-exec
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-calculator-exec">wfl-ref-method-orca-eval command line option</a>
 </li>
       </ul></li>
       <li>
@@ -533,6 +536,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-file-op-strip-cell">wfl-file-op-strip command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --charge
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-charge">wfl-ref-method-orca-eval command line option</a>
 </li>
       </ul></li>
       <li>
@@ -570,8 +580,6 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-castep-eval-directory-prefix">wfl-ref-method-castep-eval command line option</a>
-</li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-directory-prefix">wfl-ref-method-orca-eval command line option</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-directory-prefix">wfl-ref-method-orca-eval-basin-hopping command line option</a>
 </li>
@@ -725,8 +733,6 @@ title="Fullscreen mode"
     --kw
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-calc-kwargs">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-calc-kwargs">wfl-ref-method-orca-eval-basin-hopping command line option</a>
 </li>
       </ul></li>
@@ -735,6 +741,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-descriptor-calc-local">wfl-descriptor-calc command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --mult
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-mult">wfl-ref-method-orca-eval command line option</a>
 </li>
       </ul></li>
       <li>
@@ -771,8 +784,6 @@ title="Fullscreen mode"
     --orca-additional-blocks
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orca-additional-blocks">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-orca-additional-blocks">wfl-ref-method-orca-eval-basin-hopping command line option</a>
 </li>
       </ul></li>
@@ -780,8 +791,6 @@ title="Fullscreen mode"
     --orca-command
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orca-command">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-orca-command">wfl-ref-method-orca-eval-basin-hopping command line option</a>
 </li>
       </ul></li>
@@ -789,13 +798,23 @@ title="Fullscreen mode"
     --orca-simple-input
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orca-simple-input">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-orca-simple-input">wfl-ref-method-orca-eval-basin-hopping command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --orcablocks
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orcablocks">wfl-ref-method-orca-eval command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --orcasimpleinput
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orcasimpleinput">wfl-ref-method-orca-eval command line option</a>
+</li>
+      </ul></li>
       <li>
     --outfile
 
@@ -803,6 +822,8 @@ title="Fullscreen mode"
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-processing-reference-error-o">wfl-processing-reference-error command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --output
 
@@ -916,12 +937,24 @@ title="Fullscreen mode"
 </li>
       </ul></li>
       <li>
+    --rundir-prefix
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-rundir-prefix">wfl-ref-method-orca-eval command line option</a>
+</li>
+      </ul></li>
+      <li>
     --scratch-path
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-tmp">wfl-ref-method-orca-eval command line option</a>
-</li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-basin-hopping-tmp">wfl-ref-method-orca-eval-basin-hopping command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --scratchdir
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-tmp">wfl-ref-method-orca-eval command line option</a>
 </li>
       </ul></li>
       <li>
@@ -952,6 +985,13 @@ title="Fullscreen mode"
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-v">wfl command line option</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-fitting-simple-gap-v">wfl-fitting-simple-gap command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --workdir
+
+      <ul>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-workdir">wfl-ref-method-orca-eval command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1136,14 +1176,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.generate.html#wfl.generate.supercells.antisite">antisite() (in module wfl.generate.supercells)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.supercells.antisite_autopara_wrappable">antisite_autopara_wrappable() (in module wfl.generate.supercells)</a>
-</li>
       <li><a href="wfl.utils.html#wfl.utils.at_copy_save_results.at_copy_save_results">at_copy_save_results() (in module wfl.utils.at_copy_save_results)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.generate.html#wfl.generate.minimahopping.atom_opt_hopping">atom_opt_hopping() (in module wfl.generate.minimahopping)</a>
-</li>
       <li><a href="wfl.utils.html#wfl.utils.misc.atoms_to_list">atoms_to_list() (in module wfl.utils.misc)</a>
 </li>
       <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.base.autoparallelize">autoparallelize() (in module wfl.autoparallelize.base)</a>
@@ -1178,8 +1214,6 @@ title="Fullscreen mode"
         <li><a href="wfl.fit.html#wfl.fit.ref_error.calc">(in module wfl.fit.ref_error)</a>
 </li>
       </ul></li>
-      <li><a href="wfl.descriptors.html#wfl.descriptors.quippy.calc_autopara_wrappable">calc_autopara_wrappable() (in module wfl.descriptors.quippy)</a>
-</li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.calc_descriptors_to_file">calc_descriptors_to_file() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.ndim_neighbor_list.calc_list">calc_list() (in module wfl.utils.ndim_neighbor_list)</a>
@@ -1352,8 +1386,6 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.fit.gap.html#wfl.fit.gap.multistage.GAP_xml_modify_label">GAP_xml_modify_label() (in module wfl.fit.gap.multistage)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.vib.generate_normal_modes_autopara_wrappable">generate_normal_modes_autopara_wrappable() (in module wfl.generate.vib)</a>
-</li>
       <li><a href="wfl.generate.html#wfl.generate.vib.generate_normal_modes_parallel_atoms">generate_normal_modes_parallel_atoms() (in module wfl.generate.vib)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.vib.generate_normal_modes_parallel_hessian">generate_normal_modes_parallel_hessian() (in module wfl.generate.vib)</a>
@@ -1364,10 +1396,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.get_default_multiplicity">get_default_multiplicity() (wfl.calculators.orca.ORCA static method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_homo">get_homo() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_multiplicity">get_multiplicity() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.get_old_fitting_files">get_old_fitting_files() (in module wfl.cli.gap_rss_iter_fit)</a>
@@ -1447,8 +1479,6 @@ title="Fullscreen mode"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.generate.html#wfl.generate.supercells.interstitial">interstitial() (in module wfl.generate.supercells)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.supercells.interstitial_autopara_wrappable">interstitial_autopara_wrappable() (in module wfl.generate.supercells)</a>
-</li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.is_converged">is_converged() (wfl.calculators.orca.ORCA method)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.is_elemental">is_elemental() (in module wfl.cli.gap_rss_iter_fit)</a>
@@ -1463,12 +1493,10 @@ title="Fullscreen mode"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.generate.html#wfl.generate.supercells.largest_bulk">largest_bulk() (in module wfl.generate.supercells)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.supercells.largest_bulk_autopara_wrappable">largest_bulk_autopara_wrappable() (in module wfl.generate.supercells)</a>
+      <li><a href="wfl.html#wfl.descriptor_heuristics.len_scale_pair">len_scale_pair() (in module wfl.descriptor_heuristics)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.html#wfl.descriptor_heuristics.len_scale_pair">len_scale_pair() (in module wfl.descriptor_heuristics)</a>
-</li>
       <li><a href="wfl.fit.modify_database.html#wfl.fit.modify_database.simple_factor_nonperiodic.list_to_sigma_dict">list_to_sigma_dict() (in module wfl.fit.modify_database.simple_factor_nonperiodic)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.load_old_descriptors_arrays">load_old_descriptors_arrays() (in module wfl.cli.gap_rss_iter_fit)</a>
@@ -1662,8 +1690,6 @@ title="Fullscreen mode"
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.generate.html#wfl.generate.optimize.new_log">new_log() (in module wfl.generate.optimize)</a>
-</li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations.num_hess_delta">num_hess_delta (wfl.generate.vib.Vibrations attribute)</a>
 </li>
   </ul></td>
@@ -1746,6 +1772,8 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.utils.html#wfl.utils.replace_eval_in_strs.replace_eval_in_strs">replace_eval_in_strs() (in module wfl.utils.replace_eval_in_strs)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.round_sig_figs.round_sig_figs">round_sig_figs() (in module wfl.utils.round_sig_figs)</a>
 </li>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.RSS_minima_diverse">RSS_minima_diverse() (in module wfl.cli.gap_rss_iter_fit)</a>
@@ -1762,22 +1790,8 @@ title="Fullscreen mode"
         <li><a href="wfl.generate.html#wfl.generate.smiles.run">(in module wfl.generate.smiles)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.fit.html#wfl.fit.ace.run_ace_fit">run_ace_fit() (in module wfl.fit.ace)</a>
 </li>
-      <li><a href="wfl.calculators.html#wfl.calculators.generic.run_autopara_wrappable">run_autopara_wrappable() (in module wfl.calculators.generic)</a>
-
-      <ul>
-        <li><a href="wfl.generate.html#wfl.generate.buildcell.run_autopara_wrappable">(in module wfl.generate.buildcell)</a>
-</li>
-        <li><a href="wfl.generate.html#wfl.generate.minimahopping.run_autopara_wrappable">(in module wfl.generate.minimahopping)</a>
-</li>
-        <li><a href="wfl.generate.html#wfl.generate.optimize.run_autopara_wrappable">(in module wfl.generate.optimize)</a>
-</li>
-        <li><a href="wfl.generate.html#wfl.generate.smiles.run_autopara_wrappable">(in module wfl.generate.smiles)</a>
-</li>
-      </ul></li>
       <li><a href="wfl.fit.gap.html#wfl.fit.gap.simple.run_gap_fit">run_gap_fit() (in module wfl.fit.gap.simple)</a>
 </li>
   </ul></td>
@@ -1787,8 +1801,6 @@ title="Fullscreen mode"
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.generate.html#wfl.generate.md.sample">sample() (in module wfl.generate.md)</a>
-</li>
-      <li><a href="wfl.generate.html#wfl.generate.md.sample_autopara_wrappable">sample_autopara_wrappable() (in module wfl.generate.md)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.vib.sample_normal_modes">sample_normal_modes() (in module wfl.generate.vib)</a>
 
@@ -1829,8 +1841,6 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.generate.html#wfl.generate.supercells.surface">surface() (in module wfl.generate.supercells)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.supercells.surface_autopara_wrappable">surface_autopara_wrappable() (in module wfl.generate.supercells)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -1847,14 +1857,12 @@ title="Fullscreen mode"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.generate.html#wfl.generate.supercells.vacancy">vacancy() (in module wfl.generate.supercells)</a>
 </li>
-      <li><a href="wfl.generate.html#wfl.generate.supercells.vacancy_autopara_wrappable">vacancy_autopara_wrappable() (in module wfl.generate.supercells)</a>
-</li>
       <li><a href="wfl.select.html#wfl.select.selection_space.val_relative_to_nearby_composition_volume_min">val_relative_to_nearby_composition_volume_min() (in module wfl.select.selection_space)</a>
+</li>
+      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp">Vasp (class in wfl.calculators.vasp)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp">Vasp (class in wfl.calculators.vasp)</a>
-</li>
       <li><a href="wfl.utils.html#wfl.utils.convex_hull.vertical_dist_from_hull">vertical_dist_from_hull() (in module wfl.utils.convex_hull)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.vib.Vibrations">Vibrations (class in wfl.generate.vib)</a>
@@ -2125,27 +2133,27 @@ title="Fullscreen mode"
     wfl-ref-method-orca-eval command line option
 
       <ul>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-base-rundir">--base-rundir</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-calculator-exec">--calculator-exec</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-calc-kwargs">--calc-kwargs</a>
-</li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-directory-prefix">--directory-prefix</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-charge">--charge</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-keep-files">--keep-files</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-calc-kwargs">--kw</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-mult">--mult</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orca-additional-blocks">--orca-additional-blocks</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orcablocks">--orcablocks</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orca-command">--orca-command</a>
-</li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orca-simple-input">--orca-simple-input</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-orcasimpleinput">--orcasimpleinput</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-output-file">--output-file</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-output-prefix">--output-prefix</a>
 </li>
-        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-tmp">--scratch-path</a>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-rundir-prefix">--rundir-prefix</a>
+</li>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-tmp">--scratchdir</a>
+</li>
+        <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-workdir">--workdir</a>
 </li>
         <li><a href="command_line.automatic_docs.html#cmdoption-wfl-ref-method-orca-eval-tmp">-tmp</a>
 </li>
@@ -2760,7 +2768,11 @@ title="Fullscreen mode"
 </li>
       </ul></li>
       <li><a href="wfl.calculators.html#wfl.calculators.espresso.Espresso.wfl_generic_def_autopara_info">wfl_generic_def_autopara_info (wfl.calculators.espresso.Espresso attribute)</a>
+
+      <ul>
+        <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.wfl_generic_def_autopara_info">(wfl.calculators.orca.ORCA attribute)</a>
 </li>
+      </ul></li>
       <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.wfl_generic_num_inputs_per_python_subprocess">wfl_generic_num_inputs_per_python_subprocess (wfl.calculators.vasp.Vasp attribute)</a>
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.write_input">write_input() (wfl.calculators.orca.ORCA method)</a>
