deploy: 40a97105787b1f5e43b6d3be22bcc314d9febd7a

--- a/genindex.html
+++ b/genindex.html
@@ -1674,6 +1674,8 @@ title="Fullscreen mode"
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.optimize">wfl.generate.optimize</a>
 </li>
+        <li><a href="wfl.generate.html#module-wfl.generate.phonopy">wfl.generate.phonopy</a>
+</li>
         <li><a href="wfl.generate.html#module-wfl.generate.smiles">wfl.generate.smiles</a>
 </li>
         <li><a href="wfl.generate.html#module-wfl.generate.supercells">wfl.generate.supercells</a>
@@ -1827,10 +1829,10 @@ title="Fullscreen mode"
 </li>
       <li><a href="wfl.utils.html#wfl.utils.replace_eval_in_strs.replace_eval_in_strs">replace_eval_in_strs() (in module wfl.utils.replace_eval_in_strs)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.utils.html#wfl.utils.round_sig_figs.round_sig_figs">round_sig_figs() (in module wfl.utils.round_sig_figs)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wfl.cli.html#wfl.cli.gap_rss_iter_fit.RSS_minima_diverse">RSS_minima_diverse() (in module wfl.cli.gap_rss_iter_fit)</a>
 </li>
       <li><a href="wfl.calculators.html#wfl.calculators.generic.run">run() (in module wfl.calculators.generic)</a>
@@ -1841,6 +1843,8 @@ title="Fullscreen mode"
         <li><a href="wfl.generate.html#wfl.generate.minimahopping.run">(in module wfl.generate.minimahopping)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.optimize.run">(in module wfl.generate.optimize)</a>
+</li>
+        <li><a href="wfl.generate.html#wfl.generate.phonopy.run">(in module wfl.generate.phonopy)</a>
 </li>
         <li><a href="wfl.generate.html#wfl.generate.smiles.run">(in module wfl.generate.smiles)</a>
 </li>
@@ -2662,6 +2666,13 @@ title="Fullscreen mode"
 
       <ul>
         <li><a href="wfl.generate.html#module-wfl.generate.optimize">module</a>
+</li>
+      </ul></li>
+      <li>
+    wfl.generate.phonopy
+
+      <ul>
+        <li><a href="wfl.generate.html#module-wfl.generate.phonopy">module</a>
 </li>
       </ul></li>
       <li>
