deploy: 30f98a12a35ded88c097b774af8eb0cf60c172ea

--- a/examples.mlip_fitting.html
+++ b/examples.mlip_fitting.html
@@ -655,7 +655,7 @@ title="Print to PDF"
 <span class="kn">from</span> <span class="nn">wfl.configset</span> <span class="kn">import</span> <span class="n">ConfigSet</span><span class="p">,</span> <span class="n">OutputSpec</span>
 <span class="kn">from</span> <span class="nn">wfl.fit.gap.multistage</span> <span class="kn">import</span> <span class="n">prep_params</span>
 <span class="kn">from</span> <span class="nn">wfl.fit.gap.multistage</span> <span class="kn">import</span> <span class="n">fit</span> <span class="k">as</span> <span class="n">gap_fit</span>
-<span class="kn">from</span> <span class="nn">wfl.fit.ref_error</span> <span class="kn">import</span> <span class="n">calc</span> <span class="k">as</span> <span class="n">ref_calc</span>
+<span class="kn">from</span> <span class="nn">wfl.fit.error</span> <span class="kn">import</span> <span class="n">calc</span> <span class="k">as</span> <span class="n">ref_calc</span>
 <span class="kn">from</span> <span class="nn">wfl.generate.md</span> <span class="kn">import</span> <span class="n">sample</span> <span class="k">as</span> <span class="n">sample_md</span>
 <span class="kn">from</span> <span class="nn">wfl.generate.optimize</span> <span class="kn">import</span> <span class="n">run</span> <span class="k">as</span> <span class="n">optimize</span>
 <span class="kn">from</span> <span class="nn">wfl.select.by_descriptor</span> <span class="kn">import</span> <span class="n">greedy_fps_conf_global</span>
